--- a/Ionic/Ionic-core/Ionic-core.vcxproj.filters
+++ b/Ionic/Ionic-core/Ionic-core.vcxproj.filters
@@ -5,6 +5,7 @@
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\Logging\ConsoleLogger.cpp" />
     <ClCompile Include="src\Application\Ionic.cpp" />
+    <ClCompile Include="src\Input\InputManager.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Graphics\Window.h" />
@@ -12,5 +13,6 @@
     <ClInclude Include="src\Logging\ConsoleLogger.h" />
     <ClInclude Include="src\IonicDefinitions.h" />
     <ClInclude Include="src\Application\Ionic.h" />
+    <ClInclude Include="src\Input\InputManager.h" />
   </ItemGroup>
 </Project>
