--- a/Ionic/Ionic-core/Ionic-core.vcxproj
+++ b/Ionic/Ionic-core/Ionic-core.vcxproj
@@ -129,6 +129,9 @@
     <ClCompile Include="src\Logging\ConsoleLogger.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\Graphics\Window.cpp" />
+    <ClCompile Include="src\Math\vec4.cpp" />
+    <ClCompile Include="src\Math\vec3.cpp" />
+    <ClCompile Include="src\Math\vec2.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Application\Ionic.h" />
@@ -137,6 +140,9 @@
     <ClInclude Include="src\IonicDefinitions.h" />
     <ClInclude Include="src\Logging\Logger.h" />
     <ClInclude Include="src\Graphics\Window.h" />
+    <ClInclude Include="src\Math\vec4.h" />
+    <ClInclude Include="src\Math\vec3.h" />
+    <ClInclude Include="src\Math\vec2.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
