--- a/Ionic/Ionic-core/Ionic-core.vcxproj
+++ b/Ionic/Ionic-core/Ionic-core.vcxproj
@@ -124,22 +124,29 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\Math\mat4.cpp" />
+    <ClCompile Include="src\Math\mat3.cpp" />
     <ClCompile Include="src\Application\Ionic.cpp" />
     <ClCompile Include="src\Input\InputManager.cpp" />
     <ClCompile Include="src\Logging\ConsoleLogger.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\Graphics\Window.cpp" />
+    <ClCompile Include="src\Math\mat2.cpp" />
     <ClCompile Include="src\Math\vec4.cpp" />
     <ClCompile Include="src\Math\vec3.cpp" />
     <ClCompile Include="src\Math\vec2.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\Math\mat4.h" />
+    <ClInclude Include="src\Math\mat3.h" />
     <ClInclude Include="src\Application\Ionic.h" />
     <ClInclude Include="src\Input\InputManager.h" />
     <ClInclude Include="src\Logging\ConsoleLogger.h" />
     <ClInclude Include="src\IonicDefinitions.h" />
     <ClInclude Include="src\Logging\Logger.h" />
     <ClInclude Include="src\Graphics\Window.h" />
+    <ClInclude Include="src\Math\mat2.h" />
+    <ClInclude Include="src\Math\IonicMath.h" />
     <ClInclude Include="src\Math\vec4.h" />
     <ClInclude Include="src\Math\vec3.h" />
     <ClInclude Include="src\Math\vec2.h" />
