--- a/Ionic/Ionic-fileloader/Ionic-fileloader.vcxproj
+++ b/Ionic/Ionic-fileloader/Ionic-fileloader.vcxproj
@@ -19,13 +19,13 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{B992FA0A-325B-48FB-A146-B961654A9BF6}</ProjectGuid>
-    <RootNamespace>Ioniccore</RootNamespace>
+    <ProjectGuid>{35BFE4C3-E219-4E81-9064-B9A2A9FEB882}</ProjectGuid>
+    <RootNamespace>Ionicfileloader</RootNamespace>
     <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
-    <ConfigurationType>Application</ConfigurationType>
+    <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v140</PlatformToolset>
     <CharacterSet>MultiByte</CharacterSet>
@@ -68,26 +68,14 @@
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <IncludePath>$(SolutionDir)Dependencies\include\;$(IncludePath)</IncludePath>
-    <LibraryPath>$(SolutionDir)Dependencies\lib;$(LibraryPath)</LibraryPath>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
-    <IncludePath>$(SolutionDir)Dependencies\include\;$(IncludePath)</IncludePath>
-    <LibraryPath>$(SolutionDir)Dependencies\lib;$(LibraryPath)</LibraryPath>
-  </PropertyGroup>
+  <PropertyGroup />
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>GLEW_STATIC;_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
-    <Link>
-      <AdditionalDependencies>glfw3.lib;opengl32.lib;glew32s.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <SubSystem>
-      </SubSystem>
-    </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
@@ -107,7 +95,6 @@
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>glfw3.lib;opengl32.lib;glew32.lib;glew32s.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -124,37 +111,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="src\Math\mat4.cpp" />
-    <ClCompile Include="src\Math\mat3.cpp" />
-    <ClCompile Include="src\Application\Ionic.cpp" />
-    <ClCompile Include="src\Input\InputManager.cpp" />
-    <ClCompile Include="src\Logging\ConsoleLogger.cpp" />
-    <ClCompile Include="src\main.cpp" />
-    <ClCompile Include="src\Graphics\Window.cpp" />
-    <ClCompile Include="src\Math\mat2.cpp" />
-    <ClCompile Include="src\Math\vec4.cpp" />
-    <ClCompile Include="src\Math\vec3.cpp" />
-    <ClCompile Include="src\Math\vec2.cpp" />
+    <ClInclude Include="src\FileLoader.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="src\Math\mat4.h" />
-    <ClInclude Include="src\Math\mat3.h" />
-    <ClInclude Include="src\Application\Ionic.h" />
-    <ClInclude Include="src\Input\InputManager.h" />
-    <ClInclude Include="src\Logging\ConsoleLogger.h" />
-    <ClInclude Include="src\IonicDefinitions.h" />
-    <ClInclude Include="src\Logging\Logger.h" />
-    <ClInclude Include="src\Graphics\Window.h" />
-    <ClInclude Include="src\Math\mat2.h" />
-    <ClInclude Include="src\Math\IonicMath.h" />
-    <ClInclude Include="src\Math\vec4.h" />
-    <ClInclude Include="src\Math\vec3.h" />
-    <ClInclude Include="src\Math\vec2.h" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Ionic-fileloader\Ionic-fileloader.vcxproj">
-      <Project>{35bfe4c3-e219-4e81-9064-b9a2a9feb882}</Project>
-    </ProjectReference>
+    <ClCompile Include="src\FileLoader.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
