--- a/Ionic/Ionic-core/Ionic-core.vcxproj
+++ b/Ionic/Ionic-core/Ionic-core.vcxproj
@@ -124,6 +124,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\Graphics\Shader.cpp" />
     <ClCompile Include="src\Math\mat4.cpp" />
     <ClCompile Include="src\Math\mat3.cpp" />
     <ClCompile Include="src\Application\Ionic.cpp" />
@@ -137,6 +138,7 @@
     <ClCompile Include="src\Math\vec2.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\Graphics\Shader.h" />
     <ClInclude Include="src\Math\mat4.h" />
     <ClInclude Include="src\Math\mat3.h" />
     <ClInclude Include="src\Application\Ionic.h" />
@@ -155,6 +157,10 @@
     <ProjectReference Include="..\Ionic-fileloader\Ionic-fileloader.vcxproj">
       <Project>{35bfe4c3-e219-4e81-9064-b9a2a9feb882}</Project>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="src\Graphics\fShader.txt" />
+    <Text Include="src\Graphics\vShader.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
