--- a/Ionic/Ionic-core/Ionic-core.vcxproj.filters
+++ b/Ionic/Ionic-core/Ionic-core.vcxproj.filters
@@ -13,6 +13,9 @@
     <ClCompile Include="src\Math\mat3.cpp" />
     <ClCompile Include="src\Math\mat4.cpp" />
     <ClCompile Include="src\Graphics\Shader.cpp" />
+    <ClCompile Include="src\Graphics\Buffer.cpp" />
+    <ClCompile Include="src\Graphics\IndexBuffer.cpp" />
+    <ClCompile Include="src\Graphics\VertexArray.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Graphics\Window.h" />
@@ -29,6 +32,9 @@
     <ClInclude Include="src\Math\mat4.h" />
     <ClInclude Include="src\Math\IonicMath.h" />
     <ClInclude Include="src\Graphics\Shader.h" />
+    <ClInclude Include="src\Graphics\Buffer.h" />
+    <ClInclude Include="src\Graphics\IndexBuffer.h" />
+    <ClInclude Include="src\Graphics\VertexArray.h" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="src\Graphics\fShader.txt" />
